Add Fourier Series page

--- a/02-fs/03-convolution/index.html
+++ b/02-fs/03-convolution/index.html
@@ -19,11 +19,12 @@
   <table class="page-table">
     <tr>
       <th colspan="2">
-        <h1>Convolution: Calculating A Component's Magnitude</h1>
+        <h1>Convolution: Deriving a Fourier Series</h1>
       </th>
     </tr>
     <tr>
       <td class="description" colspan="2">
+        <h2>Calculating A Component's Magnitude</h2>
         <table>
           <tr>
             <td>
@@ -36,7 +37,7 @@
               </p>
               <p>
                 Here, the test wave has been set to a frequency of 5Hz and a phase of 30&deg;.
-                This corresponds to the maximum of `90` for the 5Hz component within the signal
+                This corresponds to the maximum of `90` for the 5Hz component within the signal.
               </p>
             </td>
             <td style="vertical-align: top;">
@@ -69,11 +70,11 @@
     </tr>
     <tr>
       <td class="description">
-        <h4>Signal + Test Wave</h4>
+        <h3>Signal + Test Wave</h3>
         <div id="signalTestBox" class="waveBoxHalf"></div>
       </td>
       <td class="description">
-        <h4>Convolution Curve</h4>
+        <h3>Convolution Curve</h3>
         <div id="convBox" class="waveBoxHalf"></div>
       </td>
     </tr>
@@ -100,7 +101,7 @@
         </p>
       </td>
       <td class="description">
-        <h4>Integral of Convolution Curve</h4>
+        <h3>Integral of Convolution Curve</h3>
         <div id="areaBox" class="waveBoxHalf"></div>
       </td>
     </tr>
@@ -108,9 +109,12 @@
       <td class="description" colspan="2">
         <h3>Fourier Series</h3>
         <p>
-          By deconstructing this particular signal, we have just found a Fourier Series.
+          By adjusting the frequency of the test wave, we have been able to deconstruct the signal and thereby
+          reconstruct the table shown at the top of this page.
         </p>
-
+        <p>
+          In doing so, we have just found a Fourier Series.
+        </p>
       </td>
     </tr>
   </table>
