--- a/index.html
+++ b/index.html
@@ -139,6 +139,17 @@
         located by varying the frequency of the test wave.
       </p>
     </li>
+    <li>
+      <h3><a href="./02-fs/03-convolution/index.html">Convolution: Deriving a Fourier Series</a></h3>
+      <p>
+        We know that a test wave matches a component within the signal when the integral of the convolution curves
+        reaches a maximum; however, that maximum is only proportional to that component's magnitude, not equal to it.
+      </p>
+      <p>
+        Next we'll look at using this maximum to calculate a component's magnitude, and in doing so, we will now know
+        enough to create a Fourier Series.
+      </p>
+    </li>
   </ol>
 
 </body>
