Add negative frequency page

--- a/index.html
+++ b/index.html
@@ -150,6 +150,17 @@
         enough to create a Fourier Series.
       </p>
     </li>
+    <li>
+      <h3><a href="./02-fs/04-neg-freq/index.html">Negative Frequency</a></h3>
+      <p>
+        Another brain bending concept that you're going to run into is the idea of negative frequency.
+      </p>
+      <p>
+        In the same way that you can't count to an imaginary number, so the idea of negative frequency doesn't seem to
+        make any intuitive sense &mdash; at least not if you insist that this idea must represent a tangible, physical
+        phenomenon.
+      </p>
+    </li>
   </ol>
 
 </body>
