--- a/02-fs/04-neg-freq/index.html
+++ b/02-fs/04-neg-freq/index.html
@@ -36,17 +36,21 @@
                 reject it as complete nonsense because it appears to describe a physical impossibility.
               </p>
               <p>
-                Well, this would certainly be correct if you try to imagine something oscillating `-5` times per second.
+                Well, this would certainly be correct if you try to imagine something oscillating at the rate of `-5`
+                times per second.
               </p>
             </td>
           </tr>
         </table>
         <p>
+          What would that even look like &mdash; is it moving backwards in time&hellip;?
+        </p>
+        <p>
           But before you hit the mental "Eject" button, consider the way sine and cosine waves are generated.
         </p>
         <p>
-          The circular plot shows a point moving around the circumference of a circle, and as it moves, it projects
-          lines onto the X and Y axes.
+          The circular plot below shows a point moving around the circumference of a unit circle.
+          As it moves, it projects lines onto the X and Y axes.
         </p>
         <p>
           The sine and cosine waves are created by plotting the vertical and horizontal positions of these projections.
@@ -85,7 +89,7 @@
         </p>
         <p>
           As far as the sine and cosine waves we observe out here "in the real world" are concerned, it makes no
-          differences whether the angle of rotation is considered a positive or negative value.
+          differences whether the angle of rotation is a positive or negative value.
           This distinction exists only in the mathematics.
         </p>
         <p>
