--- a/02-fs/04-neg-freq/index.html
+++ b/02-fs/04-neg-freq/index.html
@@ -32,12 +32,11 @@
             <td>
               <p>
                 As soon as you read a statement like "negative frequency", your brain will probably rebel against the
-                idea and
-                reject it as complete nonsense because it appears to describe a physical impossibility.
+                idea and reject it as complete nonsense because it appears to describe a physical impossibility.
               </p>
               <p>
-                Well, this would certainly be correct if you try to imagine something oscillating at the rate of `-5`
-                times per second.
+                Well, this would certainly be correct if you think I am trying to convince you that an object can
+                oscillate at the rate of `-5` times per second.
               </p>
             </td>
           </tr>
@@ -85,17 +84,21 @@
           Hit the Fowards/Backwards button and watch the effect this has on the trace of the sine and cosine waves.
         </p>
         <p>
-          Nada. Zip. Tiddly Squat&hellip;
+          Nada. Nichts. Zip. Diddly Squat&hellip;
         </p>
         <p>
-          As far as the sine and cosine waves we observe out here "in the real world" are concerned, it makes no
-          differences whether the angle of rotation is a positive or negative value.
-          This distinction exists only in the mathematics.
+          As far as we can observe out here "in the real world", the sine and cosine waves are not affected by the
+          direction of rotation.
+        </p>
+        <p>
+          But since the mathematics defines rotation in the anti-clockwise direction as positive, if we then rotate in
+          the opposite direction, we must necessarily represent that direction as negative &mdash; a distinction that
+          exists only in the mathematics.
         </p>
         <p>
           So when the point is moving "backwards" around the circle, the speed at which it does so is what is meant by
-          "negative frequency", but as you can see, it makes no material difference to the resulting sine or cosine
-          waves.
+          "negative frequency"; however, as you can see, this makes no material difference to the resulting sine or
+          cosine waves.
         </p>
         <br>
 
@@ -121,6 +124,10 @@
         <p style="text-align: center;">
           `e^(-i&theta;) = cos(-&theta;) + i sin(-&theta;)`
         </p>
+      </td>
+    </tr>
+    <tr>
+      <td class="description" colspan="2">
         <p>
           However, we know that the `cos` function is symmetric about the Y axis, so `cos(-&theta;) = cos(&theta;)`
         </p>
@@ -128,87 +135,86 @@
           We also know that `sin(-&theta;) = -sin(&theta;)`
         </p>
         <p>
-          Therefore, we can rewrite the above function like this:
+          Therefore, we can rewrite the above relationship like this:
         </p>
         <p style="text-align: center;">
           `e^(-i&theta;) = cos(&theta;) - i sin(&theta;)`
         </p>
-      </td>
-    </tr>
-    <tr>
-      <td class="description" style="vertical-align: top;">
-        <p>These two relationships can be shown graphically like this</p>
-        <img src="/img/sin-cos-exponential.svg" width="400" />
-      </td>
-      <td class="description">
-        <p>
-          If we add the positive and negative versions of the Fourier functions together, we get:
-        </p>
-        <table class="eq-sequence">
-          <tr>
-            <td>`e^(i&theta;) + e^(-i&theta;)`</td>
-            <td>`=`</td>
-            <td>`cos(&theta;) + i sin(&theta;) + cos(&theta;) - i sin(&theta;)`</td>
-          </tr>
-          <tr>
-            <td>`e^(i&theta;) + e^(-i&theta;)`</td>
-            <td>`=`</td>
-            <td>`cos(&theta;) + cos(&theta;) + i sin(&theta;) - i sin(&theta;)`</td>
-          </tr>
-          <tr>
-            <td>`e^(i&theta;) + e^(-i&theta;)`</td>
-            <td>`=`</td>
-            <td>`2cos(&theta;)`</td>
-          </tr>
-          <tr>
-            <td style="text-align: right;">`cos(&theta;)`</td>
-            <td>`=`</td>
-            <td>`(e^(i&theta;) + e^(-i&theta;))/2`</td>
-          </tr>
-        </table>
-        <br>
 
-        <p>
-          Similarly, if we subtract the negative version from the positive version, we get:
-        </p>
-        <table class="eq-sequence">
+        <table>
           <tr>
-            <td>`e^(i&theta;) - e^(-i&theta;)`</td>
-            <td>`=`</td>
-            <td>`cos(&theta;) + i sin(&theta;) - (cos(&theta;) - i sin(&theta;))`</td>
+            <td class="description"  style="vertical-align: top; width: 50%;">
+              <p>
+                If we add the positive and negative versions of the Fourier functions together, we get:
+              </p>
+              <table class="eq-sequence">
+                <tr>
+                  <td>`e^(i&theta;) + e^(-i&theta;)`</td>
+                  <td>`=`</td>
+                  <td>`cos(&theta;) + i sin(&theta;) + cos(&theta;) - i sin(&theta;)`</td>
+                </tr>
+                <tr>
+                  <td>`e^(i&theta;) + e^(-i&theta;)`</td>
+                  <td>`=`</td>
+                  <td>`cos(&theta;) + cos(&theta;) + i sin(&theta;) - i sin(&theta;)`</td>
+                </tr>
+                <tr>
+                  <td>`e^(i&theta;) + e^(-i&theta;)`</td>
+                  <td>`=`</td>
+                  <td>`2cos(&theta;)`</td>
+                </tr>
+                <tr>
+                  <td style="text-align: right;">`cos(&theta;)`</td>
+                  <td>`=`</td>
+                  <td>`(e^(i&theta;) + e^(-i&theta;))/2`</td>
+                </tr>
+              </table>
+            </td>
+            <td class="description" style="width: 50%;">
+              <p>
+                Similarly, if we subtract the negative version from the positive version, we get:
+              </p>
+              <table class="eq-sequence">
+                <tr>
+
+                  <td>`e^(i&theta;) - e^(-i&theta;)`</td>
+                  <td>`=`</td>
+                  <td>`(cos(&theta;) + isin(&theta;)) - (cos(&theta;) - isin(&theta;))`</td>
+                </tr>
+                <tr>
+                  <td>`e^(i&theta;) - e^(-i&theta;)`</td>
+                  <td>`=`</td>
+                  <td>`cos(&theta;) - cos(&theta;) + isin(&theta;) + isin(&theta;)`</td>
+                </tr>
+                <tr>
+                  <td>`e^(i&theta;) - e^(-i&theta;)`</td>
+                  <td>`=`</td>
+                  <td>`2i sin(&theta;)`</td>
+                </tr>
+                <tr>
+                  <td style="text-align: right;">`sin(&theta;)`</td>
+                  <td>`=`</td>
+                  <td>`(e^(i&theta;) - e^(-i&theta;))/(2i)`</td>
+                </tr>
+              </table>
+          <tr>
+            <td class="description" style="vertical-align: top;" colspan="2">
+              <p>
+                These two functions give us another profound insight into the direct equivalence between the
+                trigonometric functions `sin` and `cos` and their exponential counterparts.
+              </p>
+            </td>
           </tr>
           <tr>
-            <td>`e^(i&theta;) - e^(-i&theta;)`</td>
-            <td>`=`</td>
-            <td>`cos(&theta;) - cos(&theta;) + i sin(&theta;) + i sin(&theta;)`</td>
+            <td colspan="2" style="text-align: center;">
+              <img src="/img/sin-cos-exponential.svg" width="400" />
+            </td>
           </tr>
-          <tr>
-            <td>`e^(i&theta;) - e^(-i&theta;)`</td>
-            <td>`=`</td>
-            <td>`2sin(&theta;)`</td>
-          </tr>
-          <tr>
-            <td style="text-align: right;">`sin(&theta;)`</td>
-            <td>`=`</td>
-            <td>`(e^(i&theta;) - e^(-i&theta;))/2`</td>
-          </tr>
-        </table>
       </td>
     </tr>
-    <tr>
-      <td class="description" colspan="2">
-        <p>
-          These two functions give us another profound insight into the direct equivalence between the trigonometric
-          functions `sin` and `cos` and their exponential counterparts.
-        </p>
-        <table style="width: 40%; margin-left: auto; margin-right: auto;">
-          <tr>
-            <td>`cos(&theta;) = (e^(i&theta;) + e^(-i&theta;))/2`</td>
-            <td>`sin(&theta;) = (e^(i&theta;) - e^(-i&theta;))/2`</td>
-          </tr>
-        </table>
-      </td>
-    </tr>
+  </table>
+  </td>
+  </tr>
   </table>
   <script type="text/javascript" src="./main.js"></script>
 </body>
