--- a/01-tools/02-phase-shift/index.html
+++ b/01-tools/02-phase-shift/index.html
@@ -134,8 +134,10 @@
           So for a wave that has a frequency of 100Hz, a phase shift of 90&deg; corresponds to a time delay of:
         </p>
         <p>
-          `t=90/(100 xx 360&deg;)`<br>
-          `t=2.5ms`<br>
+          `t=(90&deg;)/(100 xx 360&deg;)`
+        </p>
+        <p>
+          `t=2.5ms`
         </p>
         <p>
           Similarly, we could rearrange this formula to calculate the angle `&theta;` given the frequency `f` and the
