Define bounds as constants

--- a/01-tools/03-amplitude/index.html
+++ b/01-tools/03-amplitude/index.html
@@ -33,15 +33,18 @@
           As you change the sliders, notice how the amplitude of point `P` changes in both the positive an negative
           direction.
         </p>
+
         <h3>Frequency</h3>
         <p>
           Frequency describes how many times the wave oscillates up and down within a given period of time.<br>
           The standard period of time is 1 second, and the units are cycles per second, or Hz.
         </p>
+
         <h3>Phase</h3>
         <p>
           Phase describes where in the up and down cycle some point on a wave has reached.
         </p>
+
         <h3>Amplitude</h3>
         <p>
           Amplitude measures the overall height of a wave; in other words, it measures the difference between a wave's
@@ -52,6 +55,16 @@
     <tr>
       <td>
         <div id="waveBox" class="waveBox"></div>
+      </td>
+    </tr>
+    <tr>
+      <td class="description">
+        <h2>Using Phase Shift and Amplitude to Construct A New Wave</h2>
+      </td>
+    </tr>
+    <tr>
+      <td>
+        <div id="newWaveBox" class="waveBox"></div>
       </td>
     </tr>
 
