Improve description of phase to rotation

--- a/01-tools/02-phase-shift/index.html
+++ b/01-tools/02-phase-shift/index.html
@@ -50,51 +50,45 @@
 
         <h2>Visualising Phase Shift</h2>
         <p>
-          In the graph below, we have two waves of the same frequency.
+          In the graph below, we have two sine waves of the same frequency.
           This means that both waves rise and fall at exactly the same rate, but not necessarily at the same time.
-          By adjusting the phase shift silder, you can control the degree of alignment.
+          By moving the point `C` around the circumference of the circle, you can see how rotation and phase shift
+          are two different ways of looking at the same phenomenon.
         </p>
         <p>
-          Move the slider over to the far left.
-          Now the two waves rise and fall exactly in sync with each other, so they are said to be <b>in phase</b>.
+          When point `C` is sitting on the positive X axis, the two waves rise and fall exactly in sync with each other,
+          so they are said to be <b>in phase</b>.
         </p>
         <p>
-          As you move the slider towards the right, you are altering the phase shift of one of the waves and their
-          rising and falling no longer lines up &mdash; They are now said to be <b>out of phase</b>.
+          As you move the point around to sit, say on the positive Y axis, the two waves now rise and fall at different
+          times and are said to be <b>out of phase</b>.
         </p>
         <p>
-          When the phase slider shows 180&deg;, the two waves are now rising and falling in exact opposition to each
-          other &mdash; they are now said to be in <b>anti-phase</b>.
+          When point `C` rests exactly on the negative X axis, the two waves now rise and fall in exact opposition to
+          each other &mdash; they are now said to be in <b>anti-phase</b>.
         </p>
       </td>
     </tr>
     <tr>
       <td>
-        <div id="twoWavesBox" class="twoWavesBox"></div>
+        <div id="circleBox" class="circleBox"></div>
+      </td>
+      <td>
+        <div id="twoWavesBox" class="sineBox"></div>
       </td>
     </tr>
     <tr>
       <td colspan="2" class="description">
         <h2>Phase Relationship Between Sine and Cosine</h2>
         <p>
-          If we rotate the vertical cosine graph from the first lesson anti-clockwise by 90&deg;, then lay it on top of
-          the horizontal sine graph, we'll get the graph shown below, where the green wave is the sine and the blue wave
-          is the cosine.
+          If you move point `C` to rest exactly on the positive Y axis, the blue sine wave now crosses the Y axis at
+          `+1` and the green sine wave crosses the Y axis at `0`.
         </p>
         <p>
-          Notice that the sine wave first crosses the X axis at 0&deg;, but the cosine wave crosses the X axis at
-          90&deg;.
-          So we can say that the cosine wave is offset from the sine wave by 90&deg;.
+          By shifting a sine wave by 90&deg; you have turned it into a cosine wave of the same frequency.
         </p>
         <p>
-          By moving the slider left and right, you can see how the phase of the blue wave changes in relation to the
-          green wave.
-        </p>
-        <p>
-          Compared to a sine wave, a cosine wave of the same frequency has a phase shift of 90&deg;.
-        </p>
-        <p>
-          If we now think of the blue wave above as a sine wave instead of a cosine wave, then we can see that:<br>
+          If we now think of the blue wave above as a cosine wave, then we can see that:<br>
           <br>
           `cos(&theta;) = sin(&theta; + 90)`<br>
           or<br>
