Improve phase shift graphs

--- a/01-tools/02-phase-shift/index.html
+++ b/01-tools/02-phase-shift/index.html
@@ -52,8 +52,12 @@
         <p>
           In the graph below, we have two sine waves of the same frequency.
           This means that both waves rise and fall at exactly the same rate, but not necessarily at the same time.
+        </p>
+        <p>
           By moving the point `C` around the circumference of the circle, you can see how rotation and phase shift
           are two different ways of looking at the same phenomenon.
+          As you move point `C`, the corresponding point `P` moves and allows you to read the phase shift of the two
+          waves.
         </p>
         <p>
           When point `C` is sitting on the positive X axis, the two waves rise and fall exactly in sync with each other,
