--- a/01-tools/04-non-pythagorean/index.html
+++ b/01-tools/04-non-pythagorean/index.html
@@ -25,11 +25,15 @@
             two sides"</i>
         </p>
         <p>
-          Although no writings of Pythagoras have ever been discovered, other ancient writers such as Plato and
-          Herodotus wrote extensively about his work.
-          By the Late Roman Period, he was already held in high regard as a philosopher and mathematician.
-          Consequently, by the first century BC, the discovery of this relationship had already been attributed to him
-          &mdash; in spite of the fact that it had been widely known for at least 1000 years before his birth.
+          Although no writings of Pythagoras have ever been discovered, other ancient writers such as <a
+            href="https://en.wikipedia.org/wiki/Plato" target="_new">Plato</a> and <a
+            href="https://en.wikipedia.org/wiki/Herodotus" target="_new">Herodotus</a> wrote extensively about his
+          work.
+        </p>
+        <p>
+          By the period of the Roman Republic, he was already held in high regard as a philosopher and mathematician, by
+          which time, this relationship had already been attributed to him &mdash; in spite of the fact that it had been
+          widely known for at least 1000 years before his birth.
         </p>
         <p>
           One of the earliest documents known to record this relationship is the <a
@@ -37,40 +41,14 @@
           Ancient Egypt during the 13th Dynasty (1803 - 1649 BC).
         </p>
         <p>
-          All that to say, as you drag point `C` around the circle, you'll see that the sum of the areas of the two
-          green
-          squares always equals the area of the blue square.
+          All that to say, as you drag point `C` around the circle, you'll see that if you add up the areas of the two
+          green squares, they will <b><i>always</i></b> equal the area of the blue square.
         </p>
       </td>
     </tr>
     <tr>
       <td>
         <div id="pythagorasBox" class="pythagorasBox"></div>
-      </td>
-    </tr>
-    <tr>
-      <td class="description">
-        <h2>That Other Famous Greek, Sohcahtoa</h2>
-        <p>
-          Only kidding, the word SOHCAHTOA is an acronym design to help you remember how the trigonometric functions
-          of sine, cosine and tangent are calculated.
-        </p>
-      </td>
-    </tr>
-    <tr>
-      <td>
-        <p style="width: 50%; margin-left: auto; margin-right: auto;">
-          <img src="/img/sohcahtoa.png" width="600" />
-        </p>
-      </td>
-    </tr>
-    <tr>
-      <td>
-        <ul>
-          <li>SOH : <b>S</b>ine = <b>O</b>pposite over <b>H</b>ypotenuse</li>
-          <li>CAH : <b>C</b>osine = <b>A</b>djacent over <b>H</b>ypotenuse</li>
-          <li>TOA : <b>T</b>angent = <b>O</b>pposite over <b>A</b>djacent</li>
-        </ul>
       </td>
     </tr>
     <tr>
@@ -95,6 +73,65 @@
         We now have a simple, visual demonstration of the trigonometric identity
         `sin(&theta;)^2 + cos(&theta;)^2 = 1`.
         </p>
+      </td>
+    </tr>
+    <tr>
+      <td class="description">
+        <h2>That Other Famous Greek, Sohcahtoa</h2>
+        <p>
+          Only kidding, Sohcahtoa was not a famous Greek mathematician: in fact it's not even a person&hellip; &#128515;<br>
+          Instead, the word SOHCAHTOA is an acronym design to help you remember how the trigonometric ratios of sine,
+          cosine and tangent are calculated.
+        </p>
+      </td>
+    </tr>
+    <tr>
+      <td>
+        <p style="width: 50%; margin-left: auto; margin-right: auto;">
+          <img src="/img/sohcahtoa.png" width="600" />
+        </p>
+      </td>
+    </tr>
+    <tr>
+      <td>
+        <p>
+          This simply means that the size of the angle `&theta;` is directly related to the ratio of the sides of a
+          right-angled triangle.
+          If you know one of these ratios, then you also know the angle.
+          Similarly, if you know the angle, then you can calculate any one of these ratios.
+        </p>
+        <dl>
+          <dt>Sine</dt>
+          <dd>
+            <p>
+              The length of side <b>opposite</b> the angle `&theta;` divided by the length of the <b>hypotenuse</b>
+              gives a ratio called <b>Sine</b>.
+            </p>
+            <p>
+              Hence SOH: <b>S</b>ine = <b>O</b>pposite over <b>H</b>ypotenuse
+            </p>
+          </dd>
+          <dt>Cosine</dt>
+          <dd>
+            <p>
+              The length of side <b>adjacent</b> to the angle `&theta;` divided by the length of the <b>hypotenuse</b>,
+              gives a ratio called <b>Cosine</b>.
+            </p>
+            <p>
+              Hence CAH: <b>C</b>osine = <b>A</b>djacent over <b>H</b>ypotenuse
+            </p>
+          </dd>
+          <dt>Tangent</dt>
+          <dd>
+            <p>
+              The length of side <b>opposite</b> the angle `&theta;` divided by the length of the <b>adjacent</b> to it
+              gives a ratio called <b>Tangent</b>.
+            </p>
+            <p>
+              Hence TOA: <b>T</b>angent = <b>O</b>pposite over <b>A</b>djacent
+            </p>
+          </dd>
+        </dl>
       </td>
     </tr>
   </table>
